fix: update dark mode background color in colours.css; ensure consistent theming style: add newline to UISiteControl.module.css for better formatting

--- a/src/css/system/colours.css
+++ b/src/css/system/colours.css
@@ -17,7 +17,7 @@
 
 .theme-dark {
   /* Dark Mode */
-  --background: var(--color-black);
+  --background: rgba(23, 21, 32, 1);
   --surface: rgba(30, 30, 30, 1);
 
   --text: var(--color-white);
